Add fancy mixin safeguard stability checker